--- a/shop/css/style.css
+++ b/shop/css/style.css
@@ -255,3 +255,10 @@ h2 {
     margin-left: 4px;
 	text-shadow:0px 1px 0px #283966;
 }
+
+.checkoutContainer {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 10px 0;
+}
